--- a/index.html
+++ b/index.html
@@ -8,33 +8,35 @@
     <title>Document</title>
 </head>
 <body>
-    <main>
-        <div class="card">
-            <img src="./images/icon-sedans.svg" alt="sedans image" srcset="">
-            <div class="title">SEDANS</div>
-            <div class="details">Choose a sedan for its affordability and 
-                excellent fuel economy.Ideal for cruising in the city or on your next road 
-                trip.
+    <div class="body">
+        <main>
+            <div class="card">
+                <img src="./images/icon-sedans.svg" alt="sedans image" srcset="">
+                <div class="title">SEDANS</div>
+                <div class="details">Choose a sedan for its affordability and 
+                    excellent fuel economy.Ideal for cruising in the city or on your next road 
+                    trip.
+                </div>
+                <button class="button">Learn More</button>
             </div>
-            <button class="button">Learn More</button>
-        </div>
-        <div class="card">
-            <img src="./images/icon-suvs.svg" alt="suvs image" srcset="">
-            <div class="title">SUVS</div>
-            <div class="details">Take an SUV for its spacious
-                interior,power,and versatility. Perfect for your next family vacation 
-                and off-road adventures.
+            <div class="card">
+                <img src="./images/icon-suvs.svg" alt="suvs image" srcset="">
+                <div class="title">SUVS</div>
+                <div class="details">Take an SUV for its spacious
+                    interior,power,and versatility. Perfect for your next family vacation 
+                    and off-road adventures.
+                </div>
+                <button class="button">Learn More</button>
             </div>
-            <button class="button">Learn More</button>
-        </div>
-        <div class="card">
-            <img src="./images/icon-luxury.svg" alt="luxury image" srcset="">
-            <div class="title">LUXURY</div>
-            <div class="details">Cruise in the best car brands without the bloated prices.
-                Enjoy the enhanced comfort of a luxury renta and arrive in style.
+            <div class="card">
+                <img src="./images/icon-luxury.svg" alt="luxury image" srcset="">
+                <div class="title">LUXURY</div>
+                <div class="details">Cruise in the best car brands without the bloated prices.
+                    Enjoy the enhanced comfort of a luxury renta and arrive in style.
+                </div>
+                <button class="button">Learn More</button>
             </div>
-            <button class="button">Learn More</button>
-        </div>
-    </main>
+        </main>
+    </div>
 </body>
 </html>
